--- a/modules/ROOT/partials/depl-examples/ubuntu-compose/shared-setup.adoc
+++ b/modules/ROOT/partials/depl-examples/ubuntu-compose/shared-setup.adoc
@@ -133,14 +133,14 @@ tag::hetzner_only_1[]
 We recommend using key-based authentication for ssh to access the configured server instead of using user and password. This is not only beneficial for security reasons but also because you can define the public key to be installed  during the initial server configuration.
 
 All OS::
-Follow the https://www.ssh.com/academy/ssh/keygen[ssh-keygen guide] to generate the required keys. We recommend, if possible, using the `ed25519` algorithm and a passphrase for enhanced security. The keys to use after generation are located in `~/.ssh`. Name the keys during the generation process accordingly to avoid overwrite existing ones.
+Follow the https://www.ssh.com/academy/ssh/keygen[ssh-keygen guide] to generate the required keys. We recommend, if possible, using the `ed25519` algorithm and a passphrase for enhanced security. The keys to use after generation are located in `~/.ssh`. Name the keys during the generation process accordingly to avoid overwriting existing ones.
 
 Use the public key::
 +
 --
 * During server setup described in one of the sections below, you can use the content of the public key file to setup ssh authentication when asked.
 
-* Alternativerly, after the server has been created, you can copy the _public_ key to the server by adding the _contents_ of the generated `<key>.pub` file to the `~/.ssh/authorized_keys` file manually. This step is necessary, because the server does not have password authentication which would be required to transfer the key by command.
+* Alternatively, after the server has been created, you can copy the _public_ key to the server by adding the _contents_ of the generated `<key>.pub` file to the `~/.ssh/authorized_keys` file manually. This step is necessary, because the server does not have password authentication which would be required to transfer the key by command.
 --
 
 Additionally for Windows::
@@ -148,8 +148,8 @@ Additionally for Windows::
 --
 * When using Putty to access your server, you must convert the _private_ key generated into Putty's `ppk` format. Read the https://www.puttygen.com[puttygen] guide for how to do so. You need to specify on each login the ppk file generated via menu:Connection[SSH > Auth > Connections > Private key file].
 
-* When using the command shell with ssh to login or when using SCP, you need to:
-** The private/public keys must be located in `C:\Users\<user>\.ssh\`
+* When using the command shell with ssh to login or when using SCP, you must:
+** Have the private/public keys in `C:\Users\<user>\.ssh\`
 ** Add the following to `C:\Users\<user>\.ssh\config`
 +
 [source,plaintext]
