--- a/modules/ROOT/pages/deployment/services/s-list/antivirus.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/antivirus.adoc
@@ -15,6 +15,22 @@
 * The reason for excluding the {service_name} service from autostart is, that it needs an external antivirus service available and configured.
 ====
 
+== Memory Considerations
+
+The antivirus service can consume considerably amounts of memory. This is relevant to provide or define sufficient memory for the deployment selected. To avoid out of memory (OOM) situations, the following equation gives a rough overview based on experiences made. The memory calculation comes without any guarantee, is intended as overview only and subject of change.
+
+`memory limit` = `max file size` x `workers` x `factor 8 - 14`
+
+With:
+
+`ANTIVIRUS_WORKERS` == 1
+
+[source,plaintext]
+----
+ 50MB file --> factor 14   --> 700MB memory
+844MB file --> factor  8,3 -->   7GB memory
+----
+
 == Antivirus Configuration
 
 === Antivirus Scanner Type
