--- a/modules/ROOT/partials/nav.adoc
+++ b/modules/ROOT/partials/nav.adoc
@@ -78,6 +78,7 @@
 *** xref:maintenance/b-r/restore.adoc[Restore]
 ** xref:maintenance/commands/commands.adoc[Maintenance Commands]
 ** xref:maintenance/space-ids/space-ids.adoc[Listing Space IDs]
+** xref:maintenance/user-ids/user-ids.adoc[Listing User IDs]
 * Migration and Upgrades
 ** xref:migration/upgrading-ocis.adoc[Upgrading Infinite Scale]
 * Monitoring
