[5.0] [PR 1072] Add a command to show the final config in compose deployments
Backport of PR #1072

--- a/modules/ROOT/partials/depl-examples/ubuntu-compose/shared-setup.adoc
+++ b/modules/ROOT/partials/depl-examples/ubuntu-compose/shared-setup.adoc
@@ -331,9 +331,9 @@ Define these settings according to your eMail configuration. With the settings d
 
 NOTE: When not defining your own domain names, internal evaluation only domain names with self-signed certificates are used automatically.
 
-NOTE: Additional options can configured like web apps. These should be configured _after_ successfully starting the deployment without issues. This eases finding any first startup issues that need to be solved first.
+NOTE: Additional options can be configured like web apps. These should be configured _after_ successfully starting the deployment without issues. This eases finding any first startup issues that need to be solved first.
 
-When the configuration was completed, you can optionally print the final assembled docker compose yml setup before starting it by using the follwing command. This output helps finding configuration issues more easily.
+When the configuration is completed, you can optionally print the final assembled docker compose yml setup before starting it by using the following command. This output helps finding configuration issues more easily.
 
 [source,bash]
 ----
