--- a/modules/ROOT/partials/depl-examples/ubuntu-compose/shared-setup.adoc
+++ b/modules/ROOT/partials/depl-examples/ubuntu-compose/shared-setup.adoc
@@ -613,7 +613,100 @@ docker volume rm {ocis_wopi}_ocis-config {ocis_wopi}_ocis-data
 
 Note that this deploymment can currently only be updated within Infinite Scale v5.
 
-If a new Infinite Scale v5 version is available, just down the compose environment and bring it back up. Containers will update automatically and you can continue using Infinite Scale as usual.
+// for testing only
+//:version-type: rolling
+//:version-type: production
+
+Infinite Scale::
++
+--
+ifeval::["{version-type}" == "rolling"]
+For Infinite Scale rolling releases, the following steps are essential to avoid breaking the setup. This is because rolling releases depend on all updates being done consecutively.
+
+If new Infinite Scale releases are available, you *must not* skip any version in between the current running and the latest available rolling release for internal update reasons. All versions need to be downloaded and started one time. For more details see the https://owncloud.dev/ocis/release_roadmap/#updating-and-overlap[Updating and Overlap] description in the developer documentation.
+
+* Each upgrade consists of a set of commands:
++
+[source,bash]
+----
+sudo docker compose down \
+sudo docker compose pull \
+sudo docker compose up -d --remove-orphans
+----
+
+* If there is no release gap, run the command block once.
+
+* For *any* https://owncloud.dev/ocis/release_roadmap/#dates[release gap], you must run the command block from above once and set the respective release in the `OCIS_DOCKER_TAG` _before_ pulling. Use no value for the last release, it defaults to `latest`.
+
+* Check if there are any Infinite Scale config changes. To do so, run a `ocis init --diff` plus apply any patches. The detailed how-to is described in the xref:migration/upgrading-ocis.adoc[Upgrading Infinite Scale] guide for 7.0.0. When done, restart the deployment.
+
+* Finally, you can remove any old images if no longer used.
+
+Note that we advise to manually check if the deployment source has changed. If this is the case, stop the deployment, backup your existing deployment source/configuration and update the xref:download-and-transfer-the-example[deployment sources], then re-apply your configuration settings and bring the deployment up.
+
+endif::[]
+
+ifeval::["{version-type}" != "rolling"]
+
+Follow these steps to update between production releases:
+
+For Infinite Scale patch releases only!::
+These commands will stop the deployment, update all images and start the deployment again. This works because the relevant `xxx_TAG` variables in the `.env` file are set to `latest` by default while others have hardcoded versions set.
++
+[source,bash]
+----
+sudo docker compose down \
+sudo docker compose pull \
+sudo docker compose up -d --remove-orphans
+----
+
+endif::[]
+--
+
+Update non-Infinite Scale Images::
++
+--
+Some images used do not have a particular release defined but use `latest`. These images can be updated if there are new releases available, like for security or bug fixes. To do so, use the following commands:
+
+[source,bash]
+----
+sudo docker compose pull \
+sudo docker compose up -d --remove-orphans
+----
+--
+
+=== Upgrading
+
+For all Infinite Scale major and minor releases including from former rolling to production::
++
+--
+* Stop the deployment with:
++
+[source,bash]
+----
+sudo docker compose stop
+----
+
+* If upgrading from rolling to production, change the `OCIS_DOCKER_IMAGE` environment variable from `owncloud/ocis-rolling` to `owncloud/ocis` in the `.env` file.
+
+* Follow the respective xref:migration/upgrading-ocis.adoc[Upgrading Infinite Scale] guide.
+
+* Backup your existing deployment source/configuration and update the xref:download-and-transfer-the-example[deployment sources] - if they have been changed, re-apply your configuration settings.
+
+* Re-pull the deployment. This will update all images with any versions that might have changed.
++
+[source,bash]
+----
+sudo docker compose pull
+----
+
+* Start the deployment.
++
+[source,bash]
+----
+sudo docker compose up -d --remove-orphans
+----
+--
 
 == Certificate Renewal
 
