Add CLI command `ocis shares cleanup`

--- a/modules/ROOT/pages/maintenance/commands/changed-cli.adoc
+++ b/modules/ROOT/pages/maintenance/commands/changed-cli.adoc
@@ -10,7 +10,10 @@
 
 See the link for a detailed description of the respective CLI command if available.
 
-* xref:maintenance/commands/commands.adoc#manage-expired-uploads[Manage Expired Uploads]  +
+* xref:maintenance/commands/commands.adoc#cleanup-orphaned-shares[Cleanup Orphaned Shares] +
+The `ocis shares cleanup` command allows removing share orphans that occur when a shared space or directory got deleted.
+
+* xref:maintenance/commands/commands.adoc#manage-expired-uploads[Manage Expired Uploads] +
 The `ocis storage-users uploads sessions --restart` command got an alternative `--resume` option. +
 Resume can be used in the same way as restart with a slightly different behavior.
 
@@ -18,7 +21,7 @@ Resume can be used in the same way as restart with a slightly different behavior
 The `ocis storage-users uploads` got restructured. +
 The deprecated `list` option is now removed, the `clean` option is now part of the `sessions command`.
 
-* xref:maintenance/commands/commands.adoc#resume-post-processing[Resume Post-Processing]  +
+* xref:maintenance/commands/commands.adoc#resume-post-processing[Resume Post-Processing] +
 The `ocis postprocessing restart` command got an alternative `resume` option. +
 Resume can be used in the same way as restart with a slightly different behavior.
 
