--- a/modules/ROOT/pages/maintenance/commands/commands.adoc
+++ b/modules/ROOT/pages/maintenance/commands/commands.adoc
@@ -66,7 +66,7 @@ Compared to offline commands that can be issued when Infinite Scale is shut down
 
 === Cleanup Orphaned Shares
 
-When a shared space or directory got deleted, use the following xref:maintenance/commands/shares-cleanup.adoc[CLI command] to cleanup those share orphans. This cant be done automatically at the moment.
+When a shared space or directory got deleted, use the following xref:maintenance/commands/shares-cleanup.adoc[CLI command] to cleanup those share orphans. This can't be done automatically at the moment.
 
 === Inspect and Manipulate Node Metadata
 
